Add changes for config architecture

--- a/demo.html
+++ b/demo.html
@@ -8,10 +8,16 @@
 <script type="text/javascript" src="src/github-activity.js"></script>
 <script>
   
- GitHubActivity.feed({
+       GitHubActivity.feed({
 	username: "diglabby",
-	handler: "http://localhost/handler.php",
-  repositories: ["https://api.github.com/users/diglabby/events", "https://api.github.com/users/MrKarlKori/events"],
+  handler: "http://localhost/handler.php",
+  repositories: {
+  diglabby:["b-prylady","liga"],
+  MrKarlKori:"MrKarlKori"
+	
+  
+  },
+	
 	selector: "#feed",
 	limit: 20 // optional
   
