optimization for mobile devices, other changings

--- a/demo.html
+++ b/demo.html
@@ -10,14 +10,7 @@
   
        GitHubActivity.feed({
 	username: "diglabby",
-  handler: "http://localhost/handler.php",
-  repositories: {
-  diglabby:["b-prylady","liga"],
-  MrKarlKori:"MrKarlKori"
-	
-  
-  },
-	
+	eventsUrl: "http://localhost/handler.php",
 	selector: "#feed",
 	limit: 20 // optional
   
